<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Calendar2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/monthYearText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="April 2023" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/viewModeToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedButton="@id/btnMonth">

                <Button
                    android:id="@+id/btnMonth"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_month" />

                <Button
                    android:id="@+id/btnWeek"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_week" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>
        
        <include 
            android:id="@+id/titlesContainer"
            layout="@layout/calendar_day_titles_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
        />

        <FrameLayout
            android:id="@+id/calendarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titlesContainer">

            <com.kizitonwose.calendar.view.CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cv_dayViewResource="@layout/calendar_day_layout" />

            <com.kizitonwose.calendar.view.WeekCalendarView
                android:id="@+id/weekCalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cv_dayViewResource="@layout/calendar_day_layout" />
        </FrameLayout>

        <TextView
            android:id="@+id/selectedDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="#EEE"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            tools:text="Selected: 2023-04-20" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/eventsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedDateText"
            tools:listitem="@layout/item_event" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/action_add_event"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
